# Applied_ML_Computer_Vision

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  classes.py  config.py  gradcam.py  main.py  model_loader.py  preprocessing.py  schemas.py
models/: logistic_regression.joblib  logistic_regression_pca_50.joblib
src/data/: color_dataset.py  dataset.py  load_data.py  transforms.py
src/explain/: gradcam_report.py
src/models/: base_line.py  cnn_scratch.py  resnet_transfer.py
src/training/: evaluate.py  evaluate_cnn.py  hparam_search_cnn.py  hyperparameter_search.py  train.py  train_cnn.py
src/utils/: seed.py
