[project]
name = "applied-ml-computer-vision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "kaggle>=2.1.2",
    "kagglehub>=1.0.1",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "pathlib>=1.0.1",
    "pillow>=12.2.0",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]
